--- a/index.html
+++ b/index.html
@@ -46,12 +46,21 @@
 
 
     <!-- home section -->
-
+    <section id="home" class="py-5 text-center text-white bg-dark">
+        <div class="container">
+            <h1 class="display-4 mb-4" style="color: #f86d03;">Welcome to My Portfolio</h1>
+            <p class="lead">I am <span class="text-info">BEREKET</span>, a <span class="text-info" id="role"></span>.
+            </p>
+            <p class="lead">I love building <span class="text-info">awesome web applications</span>.</p>
+            <a id="learn-more-btn" href="#about" class="btn btn-primary btn-lg mt-4">Learn More</a>
+        </div>
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
