--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- nav section -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <h1>BEREKET</h1>
@@ -55,6 +55,34 @@
             <a id="learn-more-btn" href="#about" class="btn btn-primary btn-lg mt-4">Learn More</a>
         </div>
     </section>
+
+    <!-- about section -->
+
+    <section id="about" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <img src="path/to/your/profile-image.jpg" alt="Your Profile Image" class="img-fluid mb-4">
+                </div>
+                <div class="col-lg-6">
+                    <h2 class="display-4 mb-4">About Me</h2>
+                    <p class="lead">Hello, I'm BEREKET, a passionate Full Stack Developer with expertise in building
+                        web applications. I have a strong foundation in both frontend and backend technologies,
+                        which allows me to create seamless and user-friendly experiences for users.</p>
+                    <p class="lead">My journey into web development began in [year], and since then, I have been
+                        continuously learning and improving my skills. I believe in staying up-to-date with the
+                        latest technologies and best practices to deliver high-quality solutions.</p>
+                    <p class="lead">I am a problem solver at heart and enjoy working in collaborative teams to bring
+                        innovative ideas to life. I am always open to new challenges and opportunities to expand my
+                        horizons.</p>
+                    <a href="#contact" class="btn btn-primary btn-lg mt-4">Get in Touch</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
