skill section update

--- a/index.html
+++ b/index.html
@@ -81,9 +81,114 @@
         </div>
     </section>
 
+    <!-- skill section -->
 
-
-
+    <section id="skills" class="py-5">
+        <div class="container">
+            <h2 class="display-4 text-center mb-4">Skills</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <h3 class="mb-3">Frontend Development</h3>
+                    <ul class="list-unstyled">
+                        <li>
+                            <span class="skill-name">HTML5</span>
+                            <div class="progress-bar" style="width: 90%; background-color: #e41a0c;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">CSS3</span>
+                            <div class="progress-bar" style="width: 85%; background-color: #28a745;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">JavaScript</span>
+                            <div class="progress-bar" style="width: 80%; background-color: #ffc107;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">React.js</span>
+                            <div class="progress-bar" style="width: 85%; background-color: #17a2b8;"></div>
+                        </li>
+                        <!-- Add more frontend skills and progress bars as needed -->
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <h3 class="mb-3">Backend Development</h3>
+                    <ul class="list-unstyled">
+                        <li>
+                            <span class="skill-name">Java</span>
+                            <div class="progress-bar" style="width: 95%; background-color: #3074e8;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">Spring boot</span>
+                            <div class="progress-bar" style="width: 90%; background-color: #1bac05;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">Spring Security</span>
+                            <div class="progress-bar" style="width: 90%; background-color: #0f310a;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">Node.js</span>
+                            <div class="progress-bar" style="width: 90%; background-color: #05059a;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">Kotlin</span>
+                            <div class="progress-bar" style="width: 85%; background-color: #d61cba;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">Python</span>
+                            <div class="progress-bar" style="width: 80%; background-color: #ffc107;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">C++</span>
+                            <div class="progress-bar" style="width: 75%; background-color: #17a2b8;"></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h3 class="mb-3">Other Skills</h3>
+                    <ul class="list-unstyled">
+                        <li>
+                            <span class="skill-name">Git</span>
+                            <div class="progress-bar" style="width: 95%; background-color: #7d5e23;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">RESTful APIs</span>
+                            <div class="progress-bar" style="width: 85%; background-color: #d604f0;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">Unit Testing</span>
+                            <div class="progress-bar" style="width: 90%; background-color: #337ab7;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">Agile Scrum</span>
+                            <div class="progress-bar" style="width: 80%; background-color: #077907;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">Responsive Web design</span>
+                            <div class="progress-bar" style="width: 80%; background-color: #dfbb04;"></div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <h3 class="mb-3">Databases</h3>
+                    <ul class="list-unstyled">
+                        <li>
+                            <span class="skill-name">MySQL</span>
+                            <div class="progress-bar" style="width: 90%; background-color: #007bff;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">MongoDB</span>
+                            <div class="progress-bar" style="width: 80%; background-color: #0feeab;"></div>
+                        </li>
+                        <li>
+                            <span class="skill-name">PostgreSql</span>
+                            <div class="progress-bar" style="width: 70%; background-color: #0e043a;"></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
