--- a/index.html
+++ b/index.html
@@ -190,6 +190,48 @@
         </div>
     </section>
 
+    <!-- projects -->
+
+    <section id="projects" class="py-5">
+        <div class="container">
+            <h2 class="display-4 text-center mb-4">Projects</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="project-item">
+                        <h3 class="mb-3">Project Title 1</h3>
+                        <p>
+                            Brief description of Project 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nulla
+                            at maximus purus.
+                        </p>
+                        <p><strong>Technologies used:</strong> HTML5, CSS3, JavaScript, Node.js, Express.js, MongoDB</p>
+                        <div class="project-links">
+                            <a href="https://github.com/yourusername/project1" target="_blank">GitHub</a> Repo</a>
+                            <a href="#" target="_blank">Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="project-item">
+                        <h3 class="mb-3">Project Title 2</h3>
+                        <p>
+                            Brief description of Project 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nulla
+                            at maximus purus.
+                        </p>
+                        <p><strong>Technologies used:</strong> HTML5, CSS3, React.js, Node.js, Express.js, PostgreSQL
+                        </p>
+                        <div class="project-links">
+                            <a href="https://github.com/yourusername/project2" target="_blank">GitHub Repo</a>
+                            <a href="#" target="_blank">Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Add more project items as needed -->
+        </div>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
