--- a/index.html
+++ b/index.html
@@ -195,35 +195,43 @@
     <section id="projects" class="py-5">
         <div class="container">
             <h2 class="display-4 text-center mb-4">Projects</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="project-item">
-                        <h3 class="mb-3">Project Title 1</h3>
-                        <p>
-                            Brief description of Project 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Nulla
-                            at maximus purus.
-                        </p>
-                        <p><strong>Technologies used:</strong> HTML5, CSS3, JavaScript, Node.js, Express.js, MongoDB</p>
-                        <div class="project-links">
-                            <a href="https://github.com/yourusername/project1" target="_blank">GitHub</a> Repo</a>
-                            <a href="#" target="_blank">Live Demo</a>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="project-item">
-                        <h3 class="mb-3">Project Title 2</h3>
-                        <p>
-                            Brief description of Project 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Nulla
-                            at maximus purus.
-                        </p>
-                        <p><strong>Technologies used:</strong> HTML5, CSS3, React.js, Node.js, Express.js, PostgreSQL
-                        </p>
-                        <div class="project-links">
-                            <a href="https://github.com/yourusername/project2" target="_blank">GitHub Repo</a>
-                            <a href="#" target="_blank">Live Demo</a>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a short card.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
                 </div>
@@ -231,6 +239,39 @@
             <!-- Add more project items as needed -->
         </div>
     </section>
+
+
+    <!-- education and certification -->
+
+    <section id="education" class="py-5">
+        <div class="container">
+            <h2 class="display-4 text-center mb-4">Education & Certification</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="education-item">
+                        <h3>Adama Science and Technology University</h3>
+                        <p class="text-muted">Bachelor's Degree in Computer Science and Engineering</p>
+                        <p>Graduated: July 2023 G.C</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="education-item">
+                        <h3>Java Web Development</h3>
+                        <p class="text-muted">Certified Java Web Developer</p>
+                        <p>Awarded: January 2022</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="education-item">
+                        <h3>RestAPI Development</h3>
+                        <p class="text-muted">Certified RestAPI Developer</p>
+                        <p>Awarded: January 2022</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
