--- a/index.html
+++ b/index.html
@@ -272,6 +272,41 @@
         </div>
     </section>
 
+    <!-- Contact Section -->
+    <section id="contact" class="py-5">
+        <div class="container">
+            <h2 class="display-4 text-center mb-4">Contact</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <form id="contact-form" method="post" action="#">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Your Name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="Your Email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" rows="5" placeholder="Your Message" name="message"
+                                required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </form>
+                </div>
+                <div class="col-md-6 contact-info">
+                    <h4>Contact Information</h4>
+                    <p><i class="fa fa-map-marker"></i> Nfas silk, Addis Ababa, Ethiopia</p>
+                    <p><i class="fa fa-phone"></i> +251 943 578 915</p>
+                    <p><i class="fa fa-envelope"></i> berekethonelign2@gmail.com</p>
+                    <div class="social-links">
+                        <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                        <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" target="_blank"><i class="fa fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
