--- a/index.html
+++ b/index.html
@@ -308,6 +308,33 @@
     </section>
 
 
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h4>Contact Information</h4>
+                    <p><i class="fa fa-map-marker"></i> Your Address, City, Country</p>
+                    <p><i class="fa fa-phone"></i> +1 (123) 456-7890</p>
+                    <p><i class="fa fa-envelope"></i> your.email@example.com</p>
+                </div>
+                <div class="col-md-6">
+                    <h4>Connect with Me</h4>
+                    <div class="social-links">
+                        <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                        <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" target="_blank"><i class="fa fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="text-center mt-3">
+            <p>&copy; 2023 Bereket Honelign. All rights reserved.</p>
+        </div>
+    </footer>
+
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
