--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="path/to/your/profile-image.jpg" alt="Your Profile Image" class="img-fluid mb-4">
+                    <img src="images/stand1.JPG" alt="My Profile Image" class="img-fluid mb-6">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="display-4 mb-4">About Me</h2>
@@ -301,9 +301,14 @@
                     <p><i class="fa fa-phone"></i> +251 943 578 915</p>
                     <p><i class="fa fa-envelope"></i> berekethonelign2@gmail.com</p>
                     <div class="social-links">
-                        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="#" target="_blank"><i class="fab fa-twitter" style="color: lightblue;"></i></a>
+                        <a href="https://www.linkedin.com/in/bereket-honelign-330b55220/" target="_blank"><i
+                                class="fab fa-linkedin" style="color: blue;"></i></a>
+                        <a href="https://github.com/bereket-7" target="_blank"><i class="fab fa-github"
+                                style="color: grey;"></i></a>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"
+                                style="color: red;"></i></a>
+
                     </div>
                 </div>
             </div>
@@ -317,16 +322,20 @@
             <div class="row">
                 <div class="col-md-6">
                     <h4>Contact Information</h4>
-                    <p><i class="fa fa-map-marker"></i> Your Address, City, Country</p>
-                    <p><i class="fa fa-phone"></i> +1 (123) 456-7890</p>
-                    <p><i class="fa fa-envelope"></i> your.email@example.com</p>
+                    <p><i class="fa fa-map-marker"></i> nfas silk, Addis Ababa, Ethiopia</p>
+                    <p><i class="fa fa-phone"></i> +251 943 578 915</p>
+                    <p><i class="fa fa-envelope"></i> berekethonelign2@gmail.com</p>
                 </div>
                 <div class="col-md-6">
                     <h4>Connect with Me</h4>
                     <div class="social-links">
-                        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/bereket-7" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="#" target="_blank"><i class="fab fa-twitter" style="color: lightblue;"></i></a>
+                        <a href="https://www.linkedin.com/in/bereket-honelign-330b55220/" target="_blank"><i
+                                class="fab fa-linkedin" style="color: blue;"></i></a>
+                        <a href="https://github.com/bereket-7" target="_blank"><i class="fab fa-github"
+                                style="color: grey;"></i></a>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"
+                                style="color: red;"></i></a>
                     </div>
                 </div>
             </div>
