--- a/index.html
+++ b/index.html
@@ -201,46 +201,125 @@
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="images/oag.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Online Art Gallery</h5>
+                            <!-- <p class="card-text">The purpose of the Online Art Gallery System is to provide a digital
+                                platform where artists can showcase and sell their artworks to their audience. It aims
+                                to connect artists with potential buyers, art enthusiasts, and collectors, making it
+                                easier for them to explore, purchase, and appreciate a wide range of artworks, including
+                                paintings, sculptures, photography, and more.</p> -->
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#projectModal1">Show
+                                Details</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="images/paypal.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a short card.</p>
+                            <h5 class="card-title">Paypal with Springboot Integration</h5>
+                            <!-- <p class="card-text">This project is to enable secure and
+                                seamless payment processing using the PayPal payment gateway within a Spring Boot
+                                application, facilitating online transactions and e-commerce operations.</p> -->
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#projectModal2">Show
+                                Details</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="images/EmployeesList.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
+                            <h5 class="card-title">Employee Management System Using Spring boot</h5>
+                            <!-- <p class="card-text">The purpose is to create an efficient and user-friendly web application
+                                for managing employee-related tasks and data. It aims to streamline HR processes, such
+                                as employee records management, attendance tracking, leave management, and performance
+                                evaluation.</p> -->
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#projectModal3">Show
+                                Details</button>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                        </div>
+
+            </div>
+        </div>
+
+
+        <!-- Modal for Project 1 -->
+        <div class="modal fade" id="projectModal1" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="projectModal1Label">Online Art Gallery</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="card-text">The purpose of the Online Art Gallery System is to provide a digital
+                            platform where artists can showcase and sell their artworks to their audience. It aims
+                            to connect artists with potential buyers, art enthusiasts, and collectors, making it
+                            easier for them to explore, purchase, and appreciate a wide range of artworks, including
+                            paintings, sculptures, photography, and more.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
-            <!-- Add more project items as needed -->
         </div>
+
+        <!-- Modal for Project 2 -->
+
+        <div class="modal fade" id="projectModal2" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="projectModal1Label2">Paypal Integration</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="card-text">This project is to enable secure and
+                            seamless payment processing using the PayPal payment gateway within a Spring Boot
+                            application, facilitating online transactions and e-commerce operations.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal for Project 3 -->
+
+        <div class="modal fade" id="projectModal3" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="projectModal1Label3">Employee Management System</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="card-text">The purpose is to create an efficient and user-friendly web application
+                            for managing employee-related tasks and data. It aims to streamline HR processes, such
+                            as employee records management, attendance tracking, leave management, and performance
+                            evaluation.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
 
