about me update

--- a/index.html
+++ b/index.html
@@ -69,15 +69,16 @@
                 </div>
                 <div class="col-lg-6">
                     <h2 class="display-4 mb-4">About Me</h2>
-                    <p class="lead">Hello, I'm BEREKET, a passionate Full Stack Developer with expertise in building
-                        web applications. I have a strong foundation in both frontend and backend technologies,
-                        which allows me to create seamless and user-friendly experiences for users.</p>
-                    <p class="lead">My journey into web development began in [year], and since then, I have been
-                        continuously learning and improving my skills. I believe in staying up-to-date with the
-                        latest technologies and best practices to deliver high-quality solutions.</p>
-                    <p class="lead">I am a problem solver at heart and enjoy working in collaborative teams to bring
-                        innovative ideas to life. I am always open to new challenges and opportunities to expand my
-                        horizons.</p>
+                    <p class="lead">Hello, I'm BEREKET, Full Stack Developer with networking skill, i have a strong
+                        understanding on both software and hardware systems. And skilled in developing Rest APIs,
+                        Microservices, and robust web applications. Proficient in front-end technologies like HTML, CSS,
+                        vue js and back-end technologies like Java,spring boot,Node.js. and skilled in database
+                        management with SQL and Postgresql databases. as well as configuration, troubleshooting
+                        networking technologies such as TCP/IP, DNS, DHCP . I am an excellent communicator and
+                        collaborator who thrives in team environments. I am passionate about staying up-to-date with the
+                        latest technologies and trends.</p>
+                    <p class="lead">I am an excellent communicator and collaborator who thrives in team environments. I
+                        am passionate about staying up-to-date with the latest technologies and trends.</p>
                     <a href="#contact" class="btn btn-primary btn-lg mt-4">Get in Touch</a>
                 </div>
             </div>
@@ -203,12 +204,7 @@
                     <div class="card h-100">
                         <img src="images/oag.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Online Art Gallery</h5>
-                            <!-- <p class="card-text">The purpose of the Online Art Gallery System is to provide a digital
-                                platform where artists can showcase and sell their artworks to their audience. It aims
-                                to connect artists with potential buyers, art enthusiasts, and collectors, making it
-                                easier for them to explore, purchase, and appreciate a wide range of artworks, including
-                                paintings, sculptures, photography, and more.</p> -->
+                            <h5 class="card-title">Online Art Gallery system using spring boot and vue js </h5>
                             <button class="btn btn-primary" data-toggle="modal" data-target="#projectModal1">Show
                                 Details</button>
                         </div>
@@ -218,10 +214,7 @@
                     <div class="card h-100">
                         <img src="images/paypal.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Paypal with Springboot Integration</h5>
-                            <!-- <p class="card-text">This project is to enable secure and
-                                seamless payment processing using the PayPal payment gateway within a Spring Boot
-                                application, facilitating online transactions and e-commerce operations.</p> -->
+                            <h5 class="card-title">Paypal with Springboot Integration with thymeleaf.</h5>
                             <button class="btn btn-primary" data-toggle="modal" data-target="#projectModal2">Show
                                 Details</button>
                         </div>
@@ -232,10 +225,6 @@
                         <img src="images/EmployeesList.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Employee Management System Using Spring boot</h5>
-                            <!-- <p class="card-text">The purpose is to create an efficient and user-friendly web application
-                                for managing employee-related tasks and data. It aims to streamline HR processes, such
-                                as employee records management, attendance tracking, leave management, and performance
-                                evaluation.</p> -->
                             <button class="btn btn-primary" data-toggle="modal" data-target="#projectModal3">Show
                                 Details</button>
                         </div>
