--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1 class="display-4 mb-4" style="color: #f86d03;">Welcome to My Portfolio</h1>
             <p class="lead">I am <span class="text-info">BEREKET</span>, a <span class="text-info" id="role"></span>.
             </p>
-            <p class="lead">I love building <span class="text-info">awesome web applications</span>.</p>
+            <p class="lead">I love building awesome<span class="text-info"> systems and applications</span>.</p>
             <a id="learn-more-btn" href="#about" class="btn btn-primary btn-lg mt-4">Learn More</a>
         </div>
     </section>
